--- a/250603/黑客技术学习-250603-03.md
+++ b/250603/黑客技术学习-250603-03.md
@@ -304,23 +304,8 @@
 ### 顶级学习资源
 
 - **书籍：**
-  - 《Practical IoT Hacking》
-  - 《The Hardware Hacker》
-- **论文/文档：**
-  - “A Survey of IoT Security: Techniques and Challenges”（IEEE）
-- **高级课程/认证：**
-  - [SANS SEC617: Wireless Penetration Testing and Ethical Hacking](https://www.sans.org/cyber-security-courses/wireless-penetration-testing-ethical-hacking/)
-  - [Offensive Security Wireless Professional (OSWP)](https://www.offensive-security.com/oswp/)
-- **靶场/平台：**
-  - [Hack The Box: IoT Labs](https://www.hackthebox.com/)
-  - [Crackmes.one - Firmware Challenges](https://crackmes.one/)
-- **开源项目：**
-  - [Ghidra](https://github.com/NationalSecurityAgency/ghidra)
-  - [
 
-
-
-非常抱歉，刚才内容因长度限制被截断。下面继续完整补
+  - 《Practical
 
 ---
 
