--- a/250613/电磁线圈发射-250613-02.md
+++ b/250613/电磁线圈发射-250613-02.md
@@ -2,7 +2,6 @@
 
 <br>
 
-
 枪口能量-2 .0j .    Accelerator Length - 160mm. 加速器的长度-1 60毫米。    Overall Length - 300mm. 总长度-3 00毫米。    Accelerator Stages - 3. 加速器阶段-3 。    Triggering Method - Optical gate. 触发方式-光门。    Magazine Capacity - 10 rounds. 杂志的能力-1 0轮。    Energy Cell Capacity - 90 rounds. 能源电池容量-9 0轮。    Firing Modes - Single round, single action (semi-automatic). 射击模式-单轮，单发（半自动） 。    Firing Rate - 10 RPM. 射击频率-1 0每分钟转速。    Mass Limit - 3.0 kg (quite heavy for a pistol). 大众极限-3 .0公斤（相当艰巨繁重，为一支手枪） 。
 
 能量来源
@@ -17,22 +16,6 @@
 
 建造加速器
 
-```
-                    ![5436_35262_5488.jpg](https://img.kechuang.org:81/r/5488?c=resource)                
+![5436_35262_5488.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-06/a537ad80-95c5-4a56-b8e7-84e2355aed83.jpg)
 
-                    ![5436_35262_5489.jpg](https://img.kechuang.org:81/r/5489?c=resource)                
-
-                    ![5436_35262_5490.gif](https://img.kechuang.org:81/r/5490?c=resource)                
-
-                    ![5436_35262_5491.gif](https://img.kechuang.org:81/r/5491?c=resource)                
-
-                    ![5436_35262_5492.gif](https://img.kechuang.org:81/r/5492?c=resource)                
-
-                    ![5436_35262_5493.jpg](https://img.kechuang.org:81/r/5493?c=resource)                
-
-                    ![5436_35262_5494.gif](https://img.kechuang.org:81/r/5494?c=resource)                
-
-                    ![5436_35262_5495.gif](https://img.kechuang.org:81/r/5495?c=resource)                
-
-                    ![5436_35262_5496.jpg](https://img.kechuang.org:81/r/5496?c=resource)
-```
+![5436_35262_5489.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-06/e99b1ab5-dcdd-4012-af2a-7c82cdea2abe.jpg)
