--- a/250613/电磁线圈发射-250613-02.md
+++ b/250613/电磁线圈发射-250613-02.md
@@ -19,3 +19,5 @@
 ![5436_35262_5488.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-06/a537ad80-95c5-4a56-b8e7-84e2355aed83.jpg)
 
 ![5436_35262_5489.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-06/e99b1ab5-dcdd-4012-af2a-7c82cdea2abe.jpg)
+
+![5436_35262_5490.gif](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-06/fcbe9eb4-6e3e-47c2-99a7-100b2add6444.gif)
